--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,4 +1,6 @@
 /* General Styles */
+
+
 body {
     margin: 0;
     padding: 0;
@@ -7,7 +9,7 @@ body {
 
 /* Hero Section */
 .hero {
-    background-image: url('https://i.pinimg.com/736x/a6/dd/ef/a6ddef33ce775e7b6053c6351e92a982.jpg');
+    background-image: url('../assets/Hero.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -67,8 +69,8 @@ body {
     transform: scale(1.05);
 }
 
-.hero h1 {
-    font-size: 2.5rem;
+/* .hero h1 {
+    font-size: 6rem;
     font-weight: bold;
     margin-bottom: 1rem;
     color: #ffffff;
@@ -80,7 +82,7 @@ body {
     margin: 0 auto;
     letter-spacing: 0.15em;
     animation: typing 3.5s steps(40, end), blinkCaret 0.75s step-end infinite;
-}
+} */
 
 .hero p {
     font-size: 1.2rem;
@@ -134,7 +136,7 @@ body {
 /* What I Do Section */
 .what-i-do {
     padding: 2rem 1rem;
-    background-color: #f5f5f5;
+    background-color: #d8e0ed;
     text-align: center;
 }
 
@@ -142,6 +144,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding-bottom: 1px;
+    
 }
 
 .what-i-do h2 {
@@ -154,7 +157,7 @@ body {
 }
 
 .service-card {
-    background-color: #fff;
+    background-color: #fcf8f8;
     padding: 2rem;
     margin: 2rem 0;
     border-radius: 15px;
@@ -400,12 +403,12 @@ body.loading #footer {
 }
 
 .hero h1 {
-    font-size: 8vw; /* Scale font size based on viewport width */
+    font-size: 8vw; 
     font-weight: bold;
     margin-bottom: 1rem;
     color: #ffffff;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-shadow: 0 0 15px rgba(0, 123, 255, 0.9);
     overflow: hidden;
     white-space: nowrap;
@@ -423,7 +426,7 @@ body.loading #footer {
 
 @media (min-width: 1024px) {
     .hero h1 {
-        font-size: 4rem; /* Set a fixed font size for larger screens */
+        font-size: 3.5rem; /* Set a fixed font size for larger screens */
     }
 }
 
